# help

minimalApp/: .gitmodules  CMakeLists.txt
minimalApp/app/: CMakeLists.txt  applicationCLI.h  main.cpp  main.qml
minimalApp/app/MyModules/: CMakeLists.txt
minimalApp/app/MyModules/Base/: CMakeLists.txt  PrimaryWindow.qml  SecondaryWindow.qml
minimalApp/app/MyModules/Icons/: CMakeLists.txt
minimalApp/app/MyModules/Theme/: CMakeLists.txt  Theme.qml
minimalApp/app/cmake/: BaseSettings.cmake  Doxygen.cmake  Git.cmake  Linker.cmake
minimalApp/backend/: CMakeLists.txt
minimalApp/backend/core/: CMakeLists.txt  engineversion.h.in
minimalApp/backend/core/cmake/: BuildSettings.cmake  Cache.cmake  ClangTools.cmake  Conan.cmake  InstallSettings.cmake  Packing.cmake  PreventSourceBuild.cmake  README.md  Sanitizers.cmake  StaticAnalyzers.cmake  Warnings.cmake
minimalApp/backend/core/include/awesome_core/: CMakeLists.txt  log.h
minimalApp/backend/core/src/: CMakeLists.txt  log.cpp
minimalApp/backend/core/test/: CMakeLists.txt  math_test.cpp
